--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,29 @@
 /* Google font import */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');
 
-body {
-    font-family: "inter", sans-serif;
+/* CSS Variables */
+:root {
+    --primary-font: "inter", sans-serif;
+    --secondary-font: "macondo", cursive;
+    --primary-color: #3a3620;/*dark brown*/
+    --secondary-color: #aa9581;
+    --highlight-color: #416a8e;
+    --highlight-color-light: #7a9fc2;
 }
-h1 {
-    font-family: "macondo", cursive;
+
+/* Global styles */
+
+body {
+    font-family: var(--primary-font);
+}
+
+h1, 
+h2, 
+h3 {
+    font-family: var(--secondary-font);
+    color: var(--primary-color);
+}
+ 
+.sub-heading-color {
+    color: var(--highlight-color);
 }
