--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ h3 {
 
 /* grid visualisaton CSS for testing */
 
-.container,
+/* .container,
 .row {
     border: 2px solid black;    
 }
@@ -38,4 +38,4 @@ h3 {
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-}
+} */
