--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,18 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+    
+}
+
+h1,
+h2 {
     text-transform: uppercase;
 }
- 
+
+h2 {
+    margin-bottom: 2rem;
+} 
+
 .sub-heading-color {
     color: var(--highlight-color);
 }
@@ -47,6 +56,17 @@ h3 {
 #header .lead {
     font-family: var(--secondary-font);
 }
+
+/* services */
+#services .card-footer {
+font-weight: bold;
+color: var(--highlight-color);
+background-color: transparent;
+}
+#services .card {
+    margin-bottom: 1.5rem;
+}
+
 /* grid visualisaton CSS for testing */
 
 /* .container,
@@ -58,3 +78,37 @@ h3 {
     border: 2px solid white;
     background-color: lightgray;
 } */
+
+/* Media queries */
+
+/* Medum dvices (tablets, 760px and up) */
+@media screen and (min-width: 768px) {
+    /* Make all services cards the same height for concistency */
+    #services .card-body {
+        min-height: 191px;
+    }
+}
+
+/* Large devices (small laptops, 992px and up) */
+@media screen and (min-width: 992px) {
+    /* Make all services cards the same height for concistency */
+    #services .card-body {
+        min-height: auto;
+    }
+}
+
+/* xl devices (large laptops and desktops, 1200px and up) */
+@media screen and (min-width: 1200px) {
+    /* Make all services cards the same height for concistency */
+    #services .card-body {
+        min-height: 220px;
+    }
+}
+
+/* xxl devices (large laptops and desktops, 1400px and up) */
+@media screen and (min-width: 1400px) {
+    /* Make all services cards the same height for concistency */
+    #services .card-body {
+        min-height: 195px;
+    }
+}
