--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ h2 {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
 /* Navbar */
 #navbar {
     background-color: var(--primary-color);
@@ -67,6 +68,48 @@ background-color: transparent;
     margin-bottom: 1.5rem;
 }
 
+/* Game library cards */
+
+#new-games .card,
+#fav-games .card {
+    border: none;
+}
+
+/* Footer / contact */
+
+#contact {
+    background-color: var(--primary-color);
+    color: white;
+    padding-bottom: 3rem;
+}
+
+#contact h2 {
+    color: white;
+}
+
+#contact .sub-heading-color {
+    color: var(--highlight-color-light);
+}
+
+#contact i {
+    color: var(--secondary-color);
+    font-size: 1.2rem;
+    margin-right: 15px;
+}
+
+#contact .social-links i {
+    color: var(--highlight-color-light);
+    font-size: 1.9rem;
+    transition: color 0.3s ease-in-out;
+}
+
+#contact .social-links i:hover {
+    color: var(--secondary-color);
+}
+
+#contact .table-dark * {
+    background-color: transparent;
+}
 /* grid visualisaton CSS for testing */
 
 /* .container,
