--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ h2 {
 /* Buttons */
 
 .custom-button-filled {
-    border: 2px spold var(--highlight-color);
+    border: 2px solid var(--highlight-color);
     background-color: var(--highlight-color);
     color: white;
 
@@ -135,6 +135,17 @@ background-color: transparent;
 
 #contact .table-dark * {
     background-color: transparent;
+}
+
+.student-discount {
+  background-color: var(--highlight-color);
+  font-weight: bold;
+  color: white;
+  display: block;
+  max-width: 300px;
+  margin: auto;
+  padding: 5px 10px;
+  font-size: 0.8rem;
 }
 /* grid visualisaton CSS for testing */
 
