fix the font of event table for small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,17 @@ background-color: transparent;
 
 /* Media queries */
 
+@media screen and (min-width: 576px) {
+    /* increase font size in events table when screen size is small*/
+    #events .table {
+        font-size: 1rem;
+    }
+    .student-discount {
+        font-size: 1rem;
+    }
+}
+
+
 /* Medum dvices (tablets, 760px and up) */
 @media screen and (min-width: 768px) {
     /* Make all services cards the same height for concistency */
