--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
+
+
 /* Google font import */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');
 
 /* CSS Variables */
 :root {
-    --primary-font: "inter", sans-serif;
-    --secondary-font: "macondo", cursive;
+    --primary-font: "Inter", sans-serif;
+    --secondary-font: "Macondo", cursive;
     --primary-color: #3a3620;/*dark brown*/
     --secondary-color: #aa9581;
     --highlight-color: #416a8e;
@@ -15,7 +17,7 @@
 
 body {
     font-family: var(--primary-font);
-    padding-top: 57.64px;
+    padding-top: 57.15px;
 }
 
 h1, 
@@ -41,6 +43,7 @@ h2 {
 
 .section {
     padding-top: 4rem;
+    
 }
 
 /* Buttons */
@@ -94,6 +97,18 @@ background-color: transparent;
     margin-bottom: 1.5rem;
 }
 
+/* Events */
+.student-discount {
+  background-color: var(--highlight-color);
+  font-weight: bold;
+  color: white;
+  display: block;
+  max-width: 300px;
+  margin: auto;
+  padding: 5px 10px;
+  font-size: 0.8rem;
+}
+
 /* Game library cards */
 
 #new-games .card,
@@ -126,6 +141,8 @@ background-color: transparent;
 #contact .social-links i {
     color: var(--highlight-color-light);
     font-size: 1.9rem;
+    -webkit-transition: color 0.3s ease-in-out;
+    -o-transition: color 0.3s ease-in-out;
     transition: color 0.3s ease-in-out;
 }
 
@@ -137,27 +154,6 @@ background-color: transparent;
     background-color: transparent;
 }
 
-.student-discount {
-  background-color: var(--highlight-color);
-  font-weight: bold;
-  color: white;
-  display: block;
-  max-width: 300px;
-  margin: auto;
-  padding: 5px 10px;
-  font-size: 0.8rem;
-}
-/* grid visualisaton CSS for testing */
-
-/* .container,
-.row {
-    border: 2px solid black;    
-}
-
-.col-12 {
-    border: 2px solid white;
-    background-color: lightgray;
-} */
 
 /* Media queries */
 
@@ -172,7 +168,7 @@ background-color: transparent;
 }
 
 
-/* Medum dvices (tablets, 760px and up) */
+/* Medium dvices (tablets, 760px and up) */
 @media screen and (min-width: 768px) {
     /* Make all services cards the same height for concistency */
     #services .card-body {
